@@ -10,6 +10,7 @@ import org.springframework.data.domain.Sort;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Builder
 @Data
@@ -27,45 +28,41 @@ public class PageRequestDTO {
 
     private String keyword;
 
-    public String[] getTypes(){
-        if(type == null || type.isEmpty()){
+    private String link;
+
+    public String[] getTypes() { // 검색조건을 BoardRepository에서 String[]로 처리하므로 검색조건 문자열로 반환하는 함수
+        if (type == null || type.isEmpty()) {
             return null;
         }
         return type.split("");
     }
 
-    public Pageable getPageable(String...props) {
-        return PageRequest.of(this.page -1, this.size, Sort.by(props).descending());
+    public Pageable getPageable(String... props) {
+        return PageRequest.of(this.page - 1, this.size, Sort.by(props).descending());
     }
 
-    private String link;
 
     public String getLink() {
 
-        if(link == null){
+        if (link == null) {
             StringBuilder builder = new StringBuilder();
 
-            builder.append("page=" + this.page);
+            builder.append("page=").append(this.page);
 
-            builder.append("&size=" + this.size);
+            builder.append("&size=").append(this.size);
 
 
-            if(type != null && type.length() > 0){
-                builder.append("&type=" + type);
+            if (type != null && type.length() > 0) {
+                builder.append("&type=").append(type);
             }
 
-            if(keyword != null){
-                try {
-                    builder.append("&keyword=" + URLEncoder.encode(keyword,"UTF-8"));
-                } catch (UnsupportedEncodingException e) {
-                }
+            if (keyword != null) {
+
+                builder.append("&keyword=")
+                        .append(URLEncoder.encode(keyword, StandardCharsets.UTF_8));
             }
-            link = builder.toString();
+                link = builder.toString();
+            }
+            return link;
         }
-
-        return link;
     }
-
-
-
-}
